--- a/yesoshiage/config/settings.yml
+++ b/yesoshiage/config/settings.yml
@@ -1,6 +1,8 @@
 Default: &defaults
   host: "localhost"
   port: 3000
+  copyright: Insert copyright statement here
+  #analytics: UA-YOURCODE
 
 Development:
   <<: *defaults
